# SceneLib

./: CMakeLists.txt  README.md
_old_code/: CFreelancerUTF_Importer.cpp  COFFImporter.cpp
include/: Material.hpp  Mesh.hpp  Scene.hpp  Texture.hpp
src/: CMakeLists.txt  Exporter.hpp  GetFormats.cpp  Importer.hpp  Scene.cpp  SceneFormat.hpp
src_converter/: MainWindow.cpp  MainWindow.hpp  main.cpp
src_converter/_old_code/: ACFF.h  CACMaterialExporter.cpp  CACMaterialExporter.h  CACMaterialFormat.cpp  CACMaterialFormat.h  CACMeshExporter.cpp  CACMeshExporter.h  CACMeshFormat.cpp  CACMeshFormat.h  CACTextureExporter.cpp  CACTextureExporter.h  CACTextureFormat.cpp  CACTextureFormat.h  CConverter.cpp  CConverter.h  CConverter1.cpp  CMTLFormat.cpp  CMTLFormat.h  CMTLImporter.cpp  CMTLImporter.h  CMaterial.cpp  COBJFormat.cpp  COBJFormat.h  COBJImporter.cpp  COBJImporter.h  CScene.cpp  CTexture.cpp  GetFormats.cpp  IExporter.h  IImporter.h  ISceneFormat.h  main.cpp
